US103/prod/k8s/Applications/Demos/Solar System/kubeadm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-system-service
  namespace: demo-solar
  labels:
    app: solar-system
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: solar-system
